deleted non used functios
