# handlers/insertCreditLine.go
@@ -7,11 +7,17 @@ import (
 	"net/http"
 )
 
+// InsertCreditLine godoc
+// @Summary Create a creditLine
+// @Description Create a creditLine
+// @Tags creditLine
+// @Accept json
+// @Param creditLine body models.CreditLineRequestBody true "creditLine Data"
+// @Success 200 {object} models.ResponseBody
+// @Router /creditLines [post]
 func InsertCreditLine(db database.CreditLineInterface) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		creditLineRequestBody := models.CreditLineRequestBody{}
-		//var responseBody models.ResponseBody
-		//var creditLineResponseBody models.CreditLineResponseBody
 		err := c.BindJSON(&creditLineRequestBody)
 		if err != nil {
 			c.JSON(http.StatusBadRequest, gin.H{"message": err.Error()})
